--- a/src/pages/list/list.html
+++ b/src/pages/list/list.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
-    <title>东期实盘秀</title>
+    <title>直播投教</title>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="static/js/jquery.md5.js"></script>
     <script type="text/javascript" src="static/js/dataformat.js"></script>
